put the finish touches

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">app-permission-manager</string>
+    <string name="app_name">app_permission_manager</string>
 </resources>
